<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_newspaper_24"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_match"
            android:title="@string/matches" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_event_24"
            android:title="@string/tournaments" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_" />
    </group>
</menu>